@@ -1,40 +1,0 @@
-{% extends "photologue/root.html" %}
-{% load url from future %}
-{% load i18n %}
-
-{% block title %}{% trans "Latest Photo Galleries" %}{% endblock %}
-
-{% block content %}
-
-	<div class="row page-header">
-	    <div class="col-lg-12">
-	        <h1>{% trans "Latest Photo Galleries" %}</h1>
-	    </div>
-	</div>
-	
-	{% if latest %}
-	    {% for gallery in latest %}
-	        <div class="row">
-	            <div class="col-lg-12">
-			        <h2><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></h2>
-			        <p class="muted"><small>{% trans "Published" %} {{ gallery.date_added }}</small></p>
-		            {% if gallery.description %}<p>{{ gallery.description|safe }}</p>{% endif %}
-				    {% for photo in gallery.sample %}
-				        <a href="{{ photo.get_absolute_url }}">
-				             <img src="{{ photo.get_thumbnail_url }}" class="thumbnail" alt="{{ photo.title }}">
-				        </a>
-					{% endfor %}
-				</div>
-		    </div>
-	    {% endfor %}
-	{% else %}
-	    <div class="row">{% trans "No galleries were found" %}.</div>
-	{% endif %}
-	
-    <div class="row">
-        <div class="col-lg-12">
-            <a href="{% url 'pl-gallery-list' 1 %}" class="btn btn-default view_all_button">{% trans "View all galleries" %}.</a>
-        </div>
-    </div>
-
-{% endblock %}
