@@ -1,25 +1,0 @@
-{% extends "photologue/root.html" %}
-{% load url from future %}
-{% load i18n %}
-
-{% block title %}{{ object.title }}{% endblock %}
-
-{% block content %}
-
-	<div class="row">
-	    <div class="col-lg-12">
-	        <h1 class="page-header">{{ object.title }}</h1>
-	        <p class="muted"><small>{% trans "Published" %} {{ object.date_added }}</small></p>        
-            {% if object.description %}{{ object.description|safe }}{% endif %}
-
-		    {% for photo in object.public %}
-		        <a href="{{ photo.get_absolute_url }}">
-		             <img src="{{ photo.get_thumbnail_url }}" class="thumbnail" alt="{{ photo.title }}">
-		        </a>
-		    {% endfor %}
-
-            <p><a href="{% url 'pl-gallery-list' 1 %}" class="btn btn-default view_all_button">{% trans "View all galleries" %}</a></p>
-	    </div>
-	</div>
-
-{% endblock %}
