@@ -1,54 +1,0 @@
-{% extends "photologue/root.html" %}
-{% load url from future %}
-{% load i18n %}
-
-{% block title %}{% trans "All Galleries" %}{% endblock %}
-
-{% block content %}
-
-    <div class="row page-header">
-        <div class="col-lg-12">
-            <h1>{% trans "All Galleries" %}</h1>
-        </div>
-    </div>
-
-    {% if object_list %}
-        {% for gallery in object_list %}
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></h2>
-                    <p class="muted"><small>{% trans "Published" %} {{ gallery.date_added }}</small></p>
-                    {% if gallery.description %}<p>{{ gallery.description|safe }}</p>{% endif %}
-                    {% for photo in gallery.sample %}
-                        <a href="{{ photo.get_absolute_url }}">
-                             <img src="{{ photo.get_thumbnail_url }}"  class="thumbnail" alt="{{ photo.title }}">
-                        </a>
-                    {% endfor %}
-                </div>
-            </div>
-        {% endfor %}
-    {% else %}
-        <div class="row">{% trans "No galleries were found" %}.</div>
-    {% endif %}
-
-	{% if is_paginated %}
-	    <ul class="pager">
-		    {% if page_obj.has_previous %}
-		    	<li><a href="{% url 'pl-gallery-list' page_obj.previous_page_number %}">{% trans "Previous" %}</a></li>
-		    {% else %}
-		    	<li class="disabled"><a href="#">{% trans "Previous" %}</a></li>
-		    {% endif %}
-		    <li class="number-of-pages">
-			    {% blocktrans with page_number=page_obj.number total_pages=page_obj.paginator.num_pages %}
-				    page {{ page_number }} of {{ total_pages }}
-				{% endblocktrans %}
-		    </li>
-		    {% if page_obj.has_next %}
-		    	<li><a href="{% url 'pl-gallery-list' page_obj.next_page_number %}">{% trans "Next" %}</a></li>
-		    {% else %}
-		    	<li class="disabled"><a href="#">{% trans "Next" %}</a></li>
-		    {% endif %}
-	    </ul>
-	{% endif %}
-
-{% endblock %}
