@@ -1,5 +1,0 @@
-{% if photo %}
-	<a title="{{ photo.title }}" href="{{ photo.get_absolute_url }}">
-		<img src="{{ photo.get_thumbnail_url }}" class="thumbnail" />
-	</a>
-{% endif %}
