@@ -1,27 +1,40 @@
 {% extends "photologue/root.html" %}
 {% load url from future %}
+{% load i18n %}
 
-{% block title %}Latest Photo Galleries{% endblock %}
+{% block title %}{% trans "Latest Photo Galleries" %}{% endblock %}
 
 {% block content %}
 
-<h1>Latest Photo Galleries</h1>
-
-{% if latest %}
-    {% for gallery in latest %}
-    <div class="photo-gallery">
-        <h2><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></h2>
-        {% for photo in gallery.sample %}
-        <div class="gallery-photo">
-            <a href="{{ photo.get_absolute_url }}"><img src="{{ photo.get_thumbnail_url }}" class="{% block gallery-photo-class %}{% endblock %}" alt="{{ photo.title }}"/></a>
+	<div class="row page-header">
+	    <div class="col-lg-12">
+	        <h1>{% trans "Latest Photo Galleries" %}</h1>
+	    </div>
+	</div>
+	
+	{% if latest %}
+	    {% for gallery in latest %}
+	        <div class="row">
+	            <div class="col-lg-12">
+			        <h2><a href="{{ gallery.get_absolute_url }}">{{ gallery.title }}</a></h2>
+			        <p class="muted"><small>{% trans "Published" %} {{ gallery.date_added }}</small></p>
+		            {% if gallery.description %}<p>{{ gallery.description|safe }}</p>{% endif %}
+				    {% for photo in gallery.sample %}
+				        <a href="{{ photo.get_absolute_url }}">
+				             <img src="{{ photo.get_thumbnail_url }}" class="thumbnail" alt="{{ photo.title }}">
+				        </a>
+					{% endfor %}
+				</div>
+		    </div>
+	    {% endfor %}
+	{% else %}
+	    <div class="row">{% trans "No galleries were found" %}.</div>
+	{% endif %}
+	
+    <div class="row">
+        <div class="col-lg-12">
+            <a href="{% url 'pl-gallery-list' 1 %}" class="btn btn-default view_all_button">{% trans "View all galleries" %}.</a>
         </div>
-        {% endfor %}
     </div>
-    {% endfor %}
-{% else %}
-    <p>No galleries were found.</p>
-{% endif %}
-
-<p><a href="{% url 'pl-gallery-list' 1 %}">View all galleries.</a></p>
 
 {% endblock %}
