@@ -1,20 +1,25 @@
 {% extends "photologue/root.html" %}
 {% load url from future %}
+{% load i18n %}
 
 {% block title %}{{ object.title }}{% endblock %}
 
 {% block content %}
 
-<h1>{{ object.title }}</h1>
-<h2>Originally published {{ object.date_added|date:"l, F jS, Y" }}</h2>
-{% if object.description %}<p>{{ object.description }}</p>{% endif %}
-<div class="photo-gallery">
-    {% for photo in object.public %}
-    <div class="gallery-photo">
-        <a href="{{ photo.get_absolute_url }}"><img src="{{ photo.get_thumbnail_url }}" class="{% block gallery-photo-class %}{% endblock %}" alt="{{ photo.title }}"/></a>
-    </div>
-    {% endfor %}
-</div>
-<p><a href="{% url 'pl-gallery-list' 1 %}">View all galleries</a></p>
+	<div class="row">
+	    <div class="col-lg-12">
+	        <h1 class="page-header">{{ object.title }}</h1>
+	        <p class="muted"><small>{% trans "Published" %} {{ object.date_added }}</small></p>        
+            {% if object.description %}{{ object.description|safe }}{% endif %}
+
+		    {% for photo in object.public %}
+		        <a href="{{ photo.get_absolute_url }}">
+		             <img src="{{ photo.get_thumbnail_url }}" class="thumbnail" alt="{{ photo.title }}">
+		        </a>
+		    {% endfor %}
+
+            <p><a href="{% url 'pl-gallery-list' 1 %}" class="btn btn-default view_all_button">{% trans "View all galleries" %}</a></p>
+	    </div>
+	</div>
 
 {% endblock %}
