@@ -8,9 +8,14 @@ Upgrade notes:
 
 THIS RELEASE BREAKS BACKWARDS COMPATIBILITY!
 
+- The built-in templates have been replaced by a new set of templates that work
+  well with Twitter-bootstrap.
+
 List of changes:
 
 - date_taken field not correctly handled during single photo upload (#80).
+- The Twitter-Bootstrap templates become the default; the previous templates are
+  moved to 'contrib'.
 
 2.8 (2014-05-04)
 ----------------
